# simple-nav-system

./: .project  README.md  tool_set_config.json
.metadata/: version.ini
PFC/: .cproject  CMakeLists.txt
components/MyDRIVERS/: .cproject
components/MyHAL/: .cproject
main/: app_main.c
rot/: .cproject  .project
rot/main/: main.c
simple-nav-system/: .cproject  .project  README.md  partitions.csv  sdkconfig  tool_set_config.json
simple-nav-system/.metadata/: version.ini
simple-nav-system/components/MyDRIVERS/: .project  CMakeLists.txt
simple-nav-system/components/MyDRIVERS/inc/: epaper.h  epaper_hd.h  epaper_hi.h  flash_store.h  gps.h  lcd16x2.h  lcd16x2_hw.h  led.h  mpu9250.h  ring_buffer.h  rotary_encoder.h  spi_driver.h  storage.h
simple-nav-system/components/MyDRIVERS/src/: epaper.c  epaper_hd.c  epaper_hi.c  flash_store.c  gps.c  lcd16x2.c  lcd16x2_hw.c  led.c  mpu9250.c  ring_buffer.c  rotary_encoder.c  spi_driver.c  storage.c
simple-nav-system/components/MyHAL/: .project  CMakeLists.txt
simple-nav-system/components/MyHAL/inc/: clockpwr.h  gpio_matrix.h  i2c_protocol.h  io_mux.h  pin.h  pinconfig.h  pwrAndclockGating.h  regs_gpio_matrix.h  regs_io_mux.h  rstClock.h  spi_hal.h  spi_protocol.h  uart.h
simple-nav-system/components/MyHAL/src/: clockpwr.c  gpio_matrix.c  i2c_protocol.c  io_mux.c  pin.c  pinconfig.c  pwrAndclockGating.c  rstClock.c  spi_hal.c  spi_protocol.c  uart.c
simple-nav-system/main/: .cproject  CMakeLists.txt  app_main.c
test/: .cproject  internal_temp.c
test/main/: main.c
weact/: .cproject  .project
(+70 files in other folders)
